--- a/registration.html
+++ b/registration.html
@@ -433,5 +433,6 @@
 
 	<!-- My JS -->
 	<script src="js/register.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
